Fix text at the bottom that was too large

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,7 @@ h2 {
   padding-bottom: 10px;
 }
 
-h3 {
+h3,h5 {
   font-family: 'Montserrat', sans-serif;
   color: #311d3f;
 }
